# tdee-macro-calc

./: README.md  data.json  main.py  pyproject.toml
.github/workflows/: python-tests.yml
tdee_macro_calc/: data.json  main.py
tests/: test_check_valid_date.py  test_convert_date.py  test_main.py
